[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlsec"
version = "2.0.0"
description = "Security analysis toolkit for machine learning models and infrastructure"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Scott Thornton", email = "scott@perfecxion.ai" },
]
keywords = [
    "machine-learning",
    "security",
    "adversarial",
    "mlops",
    "model-security",
    "ai-safety",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
vision = ["torchvision>=0.15"]
transformers = ["transformers>=4.30"]
onnx = ["onnx>=1.14", "onnxruntime>=1.15", "onnxscript>=0.1"]
safetensors = ["safetensors>=0.3"]
all = [
    "torchvision>=0.15",
    "transformers>=4.30",
    "onnx>=1.14",
    "onnxruntime>=1.15",
    "onnxscript>=0.1",
    "safetensors>=0.3",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/scthornton/ml-security-tools"
Documentation = "https://github.com/scthornton/ml-security-tools#readme"
Repository = "https://github.com/scthornton/ml-security-tools"
Issues = "https://github.com/scthornton/ml-security-tools/issues"

[project.scripts]
mlsec = "mlsec.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mlsec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that require model downloads or GPU",
    "gpu: marks tests that require CUDA",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
